--- a/ApplicationStarter/App.xaml
+++ b/ApplicationStarter/App.xaml
@@ -4,6 +4,14 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ApplicationStarter"
+             xmlns:valueConverters="clr-namespace:BasicLibrary.Converters;assembly=BasicLibrary"
+    
              StartupUri="MainWindow.xaml">
 
+    <views:MvxApplication.Resources>
+        <ResourceDictionary>
+            <valueConverters:IntToStringValueConverter x:Key="IntToStringValueConverter"/>
+        </ResourceDictionary>
+    </views:MvxApplication.Resources>
+    
 </views:MvxApplication>
