--- a/ApplicationStarter/MainWindow.xaml
+++ b/ApplicationStarter/MainWindow.xaml
@@ -5,11 +5,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:a="clr-namespace:BasicLibrary.Converters;assembly=BasicLibrary"
+    
         xmlns:local="clr-namespace:ApplicationStarter"
         mc:Ignorable="d"
         Title="MainWindow" Height="900" Width="1500"
         WindowStartupLocation="Manual" Left="0" Top="0">
-    <Grid>
-        
-    </Grid>
+
+    
+
 </views:MvxWindow>
