--- a/ApplicationStarter/Views/DecryptorView.xaml
+++ b/ApplicationStarter/Views/DecryptorView.xaml
@@ -9,50 +9,66 @@
       mc:Ignorable="d" FontSize="15" FontFamily="Segoe UI Light"
       d:DesignHeight="850" d:DesignWidth="1500">
 
+    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
 
-    <Grid Background="Gray">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="10"/>
-            <ColumnDefinition Width="150"/>
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="auto" MinWidth="60"/>
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="10"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="10"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="10"/>
-        </Grid.RowDefinitions>
+        <Grid Background="Gray">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="15"/>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="*" MinWidth="60"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="15"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="15"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="*" MaxHeight="200"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="15"/>
+            </Grid.RowDefinitions>
 
-        <Button Grid.Row="1" Grid.Column="1" mvx:Bi.nd="Command SwitchViewToEncoderCommand" Background="Azure" MinHeight="50"  Width="150">
-            <TextBlock Text="ENCODER" FontWeight="Bold" FontSize="30"></TextBlock>
-        </Button>
-        <Button Grid.Row="1" Grid.Column="2" Background="Azure" MinHeight="50" Width="150" HorizontalAlignment="Left">
-            <TextBlock Text="DECODER" FontWeight="Bold" FontSize="30"></TextBlock>
-        </Button>
+            <Button Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" mvx:Bi.nd="Command SwitchViewToEncoderCommand" Background="Azure" MinHeight="50" Padding="10" Width="200" HorizontalAlignment="Left">
+                <TextBlock Text="ENCODER" FontWeight="Bold" FontSize="40" ></TextBlock>
+            </Button>
+            <Button  Grid.Row="1" Grid.Column="2" Background="Azure" MinHeight="50" Width="200" HorizontalAlignment="Center" Padding="10" Margin="0,0,230,0">
+                <TextBlock Text="DECODER" FontWeight="Bold" FontSize="40"></TextBlock>
+            </Button>
 
-        <Image x:Name="originalImage" Grid.Row="3" Grid.Column="2" Height="400" Width="500" Source="{Binding OriginalImageSourcePath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></Image>
-        <Image x:Name="imageWithHiddenMessage" Grid.Row="3" Grid.Column="4" Height="400" Width="500" Source="{Binding ImageWithHiddenMessageSourcePath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></Image>
-        <TextBox x:Name="hiddenMessage" Text="{Binding HiddenMessage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" Margin="5" Grid.Row="5" Grid.Column="2" MinHeight="150" Grid.ColumnSpan="3" MaxWidth="1000"></TextBox>
-      
-        <WrapPanel Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="4" >
-            <Button mvx:Bi.nd="Command DecryptMessageToStringCommand" Content="Decrypt Message" MinWidth="150" MaxWidth="250"  Margin="5,0,10,0" Grid.Row="5" Grid.Column="2"
-                HorizontalAlignment="Left" IsEnabled="{Binding IsEnabled, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></Button>
-            <Button x:Name="saveMessageButton" Content="Save Message" MinWidth="150" MaxWidth="250"  Margin="0,0,10,0" Grid.Row="5" Grid.Column="2"
-                HorizontalAlignment="Left"></Button>
-            <Button mvx:Bi.nd="Command LoadOriginalImageCommand" Content="Load Original Image" MinWidth="150" MaxWidth="250"  Margin="0,0,10,0" Grid.Row="5" Grid.Column="2"
-                HorizontalAlignment="Right"></Button>
-            <Button mvx:Bi.nd="Command LoadImageWithMessageCommand" Content="Load Image With Message" MinWidth="150" MaxWidth="250"  Margin="0,0,10,0" Grid.Row="5" Grid.Column="2"
-                HorizontalAlignment="Right"></Button>
-            
-        </WrapPanel>
-    </Grid>
-      
+            <TextBlock Text="Original image" Grid.Row="2" Grid.Column="2" Margin="10" FontSize="30" HorizontalAlignment="Center"></TextBlock>
+
+            <TextBlock Text="Image with hidden message" Grid.Row="2" Grid.Column="4" Margin="10" FontSize="30" HorizontalAlignment="Center"></TextBlock>
+
+
+            <Image x:Name="originalImage" Grid.Row="3" Grid.Column="2" Height="350" Width="550" Source="{Binding OriginalImageSourcePath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></Image>
+            <Image x:Name="imageWithHiddenMessage" Grid.Row="3" Grid.Column="4" Height="350" Width="550" Source="{Binding ImageWithHiddenMessageSourcePath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></Image>
+
+            <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" FlowDirection="LeftToRight" Height="50">
+                <TextBlock Text="Lenght of the message: " FontSize="35" TextBlock.FontWeight="Bold"></TextBlock>
+                <TextBlock Text="{Binding LengthOfMessage, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged, Converter={StaticResource IntToStringValueConverter}}" FontSize="35" TextBlock.Foreground="Red" TextBlock.FontWeight="Bold"></TextBlock>
+            </StackPanel>
+
+            <TextBox x:Name="hiddenMessage" Text="{Binding HiddenMessage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" Margin="5" Grid.Row="5" Grid.Column="2" MinHeight="150" Grid.ColumnSpan="3" MaxWidth="1100" MaxLength="2000"></TextBox>
+
+            <Button mvx:Bi.nd="Command DecryptMessageToStringCommand" Content="Decrypt Message" MinWidth="150" MaxWidth="250"  Margin="35,0,10,0" Grid.Row="6" Grid.Column="2" FontSize="20" Padding="8"
+                HorizontalAlignment="Left" IsEnabled="{Binding DecryptIsEnabled, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></Button>
+            <StackPanel Orientation="Horizontal" Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="3" FlowDirection="RightToLeft" Margin="0,0,35,0">
+                <Button mvx:Bi.nd="Command SaveMessageCommand" Content="Save Message" MinWidth="150" MaxWidth="250"  Margin="0,0,10,0" Grid.Row="5" Grid.Column="2" FontSize="20" Padding="8"
+                IsEnabled="{Binding SaveMessageIsEnabled, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></Button>
+                <Button mvx:Bi.nd="Command LoadImageWithMessageCommand" Content="Load Image With Message" MinWidth="150" MaxWidth="250"  Margin="30,0,10,0" Grid.Row="5" Grid.Column="2" FontSize="20" Padding="8"
+                ></Button>
+                <Button mvx:Bi.nd="Command LoadOriginalImageCommand" Content="Load Original Image" MinWidth="150" MaxWidth="250"  Margin="0,0,10,0" Grid.Row="5" Grid.Column="2" FontSize="20" Padding="8"
+                ></Button>
+                
+                
+                
+
+            </StackPanel>
+        </Grid>
+    </ScrollViewer>
+
 </views:MvxWpfView>
