--- a/ApplicationStarter/Views/EncryptorView.xaml
+++ b/ApplicationStarter/Views/EncryptorView.xaml
@@ -9,9 +9,9 @@
              mc:Ignorable="d" FontSize="15" FontFamily="Segoe UI Light"
              d:DesignHeight="850" d:DesignWidth="1500">
 
-    
+
     <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-        
+
         <Grid Background="Gray">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="15"/>
@@ -33,7 +33,7 @@
                 <RowDefinition Height="15"/>
             </Grid.RowDefinitions>
 
-            
+
             <Button Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Background="Azure" MinHeight="50" Padding="10" Width="200" HorizontalAlignment="Left">
                 <TextBlock Text="ENCODER" FontWeight="Bold" FontSize="40" ></TextBlock>
             </Button>
@@ -53,7 +53,7 @@
 
             <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" FlowDirection="LeftToRight" Height="50">
                 <TextBlock Text="MAX CHARACTERS: " FontSize="35" TextBlock.FontWeight="Bold"></TextBlock>
-                <TextBlock Text="{Binding MaxCharactersForMessage}" FontSize="35" TextBlock.Foreground="Red" TextBlock.FontWeight="Bold"></TextBlock>
+                <TextBlock Text="{Binding MaxCharactersForMessage}" FontSize="35" TextBlock.FontWeight="Bold"></TextBlock>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="4" Grid.ColumnSpan="2" FlowDirection="LeftToRight" Height="50">
@@ -69,26 +69,26 @@
                 <TextBlock  Grid.Row="3" Grid.Column="0" Margin="5" Text="{Binding NumOfCharactersLeftInMessage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="35" HorizontalAlignment="Center" ></TextBlock>-->
 
 
-            
-            
-            <Button mvx:Bi.nd="Command EncryptMessageCommand" Content="Encrypt Message" Grid.Row="6" Grid.Column="2" MinWidth="150" MaxWidth="250"  Margin="5,0,10,0"  Padding="10"
-                 HorizontalAlignment="Left"  IsEnabled="{Binding IsEnabled, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></Button>
-            <StackPanel Orientation="Horizontal" Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="3" FlowDirection="RightToLeft">
-                <Button mvx:Bi.nd="Command LoadImageCommand" Content="Load Image" MinWidth="150" MaxWidth="250" Margin="5,0,10,0"  Padding="10"
+
+
+            <Button mvx:Bi.nd="Command EncryptMessageCommand" Content="Encrypt Message" Grid.Row="6" Grid.Column="2" MinWidth="150" MaxWidth="250" Margin="35,0,10,0" FontSize="20"  Padding="8"
+                 HorizontalAlignment="Left" IsEnabled="{Binding IsEnabled, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></Button>
+            <StackPanel Orientation="Horizontal" Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="3" Margin="0,0,35,0" FlowDirection="RightToLeft">
+                <Button mvx:Bi.nd="Command LoadImageCommand" Content="Load Image" MinWidth="150" MaxWidth="250" Margin="0,0,10,0" FontSize="20" Padding="8"
                 ></Button>
-                <Button mvx:Bi.nd="Command SaveImageCommand" Content="Save Image" MinWidth="150" MaxWidth="250" Margin="0,0,10,0"  Padding="10"
+                <Button mvx:Bi.nd="Command SaveImageCommand" Content="Save Image" MinWidth="150" MaxWidth="250" Margin="0,0,10,0" FontSize="20" Padding="8"
+                IsEnabled="{Binding SaveImageIsEnabled, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></Button>
+                <Button mvx:Bi.nd="Command LoadMessageCommand"  Content="Load Message" MinWidth="150" MaxWidth="250"  Margin="30,0,10,0" FontSize="20" Padding="8"
                 ></Button>
-                <Button mvx:Bi.nd="Command LoadMessageCommand"  Content="Load Message" MinWidth="150" MaxWidth="250"  Margin="30,0,10,0"  Padding="10"
-                ></Button>
-                <Button mvx:Bi.nd="Command SaveMessageCommand" Content="Save Message" MinWidth="150" MaxWidth="250"  Margin="0,0,10,0"  Padding="10"
-                ></Button>
+                <Button mvx:Bi.nd="Command SaveMessageCommand" Content="Save Message" MinWidth="150" MaxWidth="250"  Margin="0,0,10,0" FontSize="20" Padding="8"
+                IsEnabled="{Binding SaveMessageIsEnabled, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></Button>
 
             </StackPanel>
 
-            
+
 
         </Grid>
     </ScrollViewer>
-    
-    
+
+
 </views:MvxWpfView>
