--- a/ApplicationStarter/Views/EncryptorView.xaml
+++ b/ApplicationStarter/Views/EncryptorView.xaml
@@ -49,16 +49,32 @@
 
             <Image Grid.Row="3" Grid.Column="4" Height="350" Width="550" Source="{Binding ImageWithHiddenMessageSourcePath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></Image>
 
+            <Grid Grid.Row="4" Grid.Column="1" Grid.RowSpan="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="150"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0" Grid.Column="0" Text="HOW TO:" FontSize="20"  Height="25" TextWrapping="Wrap" Margin="0,30,0,0"/>
+                <TextBlock Grid.Row="1" Grid.Column="0" Text="1. Load or write down message" Height="45" TextWrapping="Wrap" Margin="0,30,0,0"/>
+                <TextBlock Grid.Row="2" Grid.Column="0" Text="2. Load image to hide message in" Height="45" TextWrapping="Wrap" Margin="0,10,0,0"/>
+                <TextBlock Grid.Row="3" Grid.Column="0" Text="3. Press Encrypt Message button to generate image with hidden message" Height="85" TextWrapping="Wrap" Margin="0,10,0,0"/>
+
+            </Grid>
             <TextBox Text="{Binding MessageToHide, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" MaxLength="{Binding MaxCharactersForMessage}" TextWrapping="Wrap" Margin="5" Grid.Row="5" Grid.Column="2" MinHeight="150" Grid.ColumnSpan="3" MaxWidth="1100"></TextBox>
 
             <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="2" FlowDirection="LeftToRight" Height="50">
-                <TextBlock Text="MAX CHARACTERS: " FontSize="35" TextBlock.FontWeight="Bold"></TextBlock>
+                <TextBlock Text="MAX CHARACTERS: " FontSize="35" TextBlock.FontWeight="Bold" Margin="35,0,0,0"></TextBlock>
                 <TextBlock Text="{Binding MaxCharactersForMessage}" FontSize="35" TextBlock.FontWeight="Bold"></TextBlock>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="4" Grid.ColumnSpan="2" FlowDirection="LeftToRight" Height="50">
-                <TextBlock Text="CHARACTERS LEFT FOR MSG: " FontSize="35" TextBlock.FontWeight="Bold"></TextBlock>
-                <TextBlock Text="{Binding NumOfCharactersLeftInMessage, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource IntToStringValueConverter}}" FontSize="35" TextBlock.Foreground="Red" TextBlock.FontWeight="Bold"></TextBlock>
+                <TextBlock Text="MESSAGE LENGTH: " FontSize="35" TextBlock.FontWeight="Bold"></TextBlock>
+                <TextBlock Text="{Binding LengthOfMessage, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource IntToStringValueConverter}}" FontSize="35" TextBlock.Foreground="Red" TextBlock.FontWeight="Bold"></TextBlock>
             </StackPanel>
 
 
@@ -84,7 +100,10 @@
                 IsEnabled="{Binding SaveMessageIsEnabled, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></Button>
 
             </StackPanel>
-
+            <StackPanel Orientation="Horizontal" Grid.Row="6" Grid.Column="5" FlowDirection="LeftToRight" Height="50">
+                <TextBlock Text="Characters left: " FontSize="18" TextBlock.FontWeight="Bold"></TextBlock>
+                <TextBlock Text="{Binding NumOfCharactersLeftInMessage, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource IntToStringValueConverter}}" FontSize="18" TextBlock.Foreground="Red" TextBlock.FontWeight="Bold"></TextBlock>
+            </StackPanel>
 
 
         </Grid>
